--- a/src/SafeOrbit/SafeOrbit.csproj
+++ b/src/SafeOrbit/SafeOrbit.csproj
@@ -47,9 +47,10 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\LICENSE" Link="LICENSE" Pack="true" PackagePath="" />
-    <Content Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="" />
+    <None Include="..\..\CHANGELOG.md" Link="CHANGELOG.md" />
+    <None Include="..\..\LICENSE" Link="LICENSE" Pack="true" PackagePath="\" />
     <None Include="..\..\docs\img\logo\logo_60x60.png" Pack="true" PackagePath="\" />
+    <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <NoWarn>$(NoWarn);1591</NoWarn>
@@ -62,21 +63,21 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageOutputPath>../../dist/</PackageOutputPath>
     <PackageId>SafeOrbit</PackageId>
-    <Version>0.3.1</Version>
+    <Version>0.4.0</Version>
     <Authors>undergroundwires</Authors>
     <Title>SafeOrbit 🛡️ is easy-to-use and strong security toolkit for .NET</Title>
     <Description>
       SafeOrbit 🛡️ is a security toolset including different high performance algorithms and easy to use classes for advanced memory protection.
-      ► SafeOrbit's primarly focus is strong memory protection.
-      ► It protects every byte in your application with encryption in transit and at rest.
-      ► It safeguards your application against memory injections and timing attacks.
-      ► It also provides a bunch of tools to implement strong and high performance cryptographically secure algorithms for encryption, hashing and random.
+      ► Protects your strings in memory while allowing you to securely compare &amp; modify them.
+      ► Protects your binary data with SafeBytes.
+      ► Anti injection module safeguards your application against memory injections and timing attacks.
+      ► Leverages high performance and secure algorithms for encryption, hashing and random in interfaces that makes it much hard to screw up.
     </Description>
-    <Copyright>Copyright 2016 - 2019</Copyright>
+    <Copyright>Copyright 2016 - 2020</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <!-- including PDB files in NuGet for source link because symbolsource.org does not support portable PDBs -->
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <PackageReleaseNotes>https://github.com/undergroundwires/SafeOrbit/releases/tag/0.3.1</PackageReleaseNotes>
+    <PackageReleaseNotes>https://github.com/undergroundwires/SafeOrbit/releases/tag/0.4.0</PackageReleaseNotes>
     <PackageTags>.net security protect safeorbit hash safestring saferandom safebytes protection injection detection asynchronous encryption</PackageTags>
     <PackageIcon>logo_60x60.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
